2013-02-02  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java: Change how enclosed expressions are
	translated - use begin/end markers ($[$ and $]$) instead of $unquote$.
	Add support for continuaton markers '&-'.
	(readEnclosed): New protected convenience method.

2013-01-23  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java (readElementConstructor): Add support for
	enclosed expression that evaluate to an attribute node.

2013-01-21  Per Bothner  <per@bothner.com>

	* LispReader.java (readToken): Break on '{' in token starting with '&'.
	(handlePostfix): If we see '[' or '{' following a '&SYMBOL',
	then parse a SRFI-108 named quasi-symbol.
	(makePair2): New convenience method.
	(deprecatedXmlEnlosedReported): New boolean.
	* ReaderExtendedLiteral.java: New class, extending ReaderConstituent.
	Support for SRFI-108 and SRFI-109 string and named quasi-literals.
	Lots of code factored out from ReaderXmlElement.java.
	* ReaderXmlElement.java: Re-factored to use inherited code.
	Also, deprecated '{...}' for enclosed expressions in favor of '[...]'.
	* Makefile.am: Update accordingly.
	* ReaderTable.java (initialize): Bind '&; to ReaderExtendedLiteral.
	* LispLanguage.java (constructNamespace, entityNamespace): New statics.
	* ReadTableEntry.java (ampersand): New field.

2013-01-21  Per Bothner  <per@bothner.com>

	* LispReader.java (readToken): Remove unused readCase parameter.
	Update callers.
	* ReaderConstituent.java: Change to extend ReaderMisc.
	(read): Override 3-parameter version, not 4-parameter version.
	* ReaderMisc.java (read): Likewise.

2013-01-20  Per Bothner  <per@bothner.com>

	* ReaderConstituent.java: New class, extends ReadTableEntry.
	* Makefile.am: Update acccordingly.
	* ReaderMisc.java (read): New method.
	* ReadTableEntry.java (singleEscape, multipleEscape,
	constituent, brace): Initialize to ReaderConstituent instances.
	* LispReader.java (readValues): Is now trivial - no switch statement.
