@@ -31,10 +31,10 @@
          '($string$ "abc")
          "abc")
 (strtest &{ab&(+ 3 4)xz}
-         '($string$ "ab" |$[$| (+ 3 4) |$]$| "xz")
+         '($string$ "ab" $<<$ (+ 3 4) $>>$ "xz")
          "ab7xz")
 (strtest &{ab&[(+ 3 4)]xz}
-         '($string$ "ab" |$[$| (+ 3 4) |$]$| "xz")
+         '($string$ "ab" $<<$ (+ 3 4) $>>$ "xz")
          "ab7xz")
 ;; Literal nested braces.
 (strtest &{ab{x}{}c{{d}}}
@@ -42,10 +42,10 @@
          "ab{x}{}c{{d}}")
 ;; Literal nested braces with enclosed expression.
 (strtest &{ab{&[(+ 5 7)]c}z}
-         '($string$ "ab{" |$[$| (+ 5 7) |$]$| "c}z")
+         '($string$ "ab{" $<<$ (+ 5 7) $>>$ "c}z")
          "ab{12c}z")
 (strtest &{ab&[3 4]xzy}
-         '($string$ "ab" |$[$| 3 4 |$]$| "xzy")
+         '($string$ "ab" $<<$ 3 4 $>>$ "xzy")
          "ab3 4xzy")
 (strtest &{_&lbrace;_&rbrace;_&gt;_&lt;_&quot;_&apos;_}
          '($string$ "_" $entity$:lbrace "_" $entity$:rbrace "_" $entity$:gt
